--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Busy Day Schedule</title>
     <style>
         /* Styling the table */
@@ -10,11 +8,12 @@
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
+            
         }
 
         /* Styling the table headers */
         th {
-            background-color: #4CAF50;
+            background-color: #FFC0CB;
             color: white;
             padding: 10px;
             font-size: 1.2em;
