--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
 <head>
     <title>My Busy Day Schedule</title>
     <style>
-        /* Styling the table */
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 20px;
-            
+            margin-top: 20px;         
         }
-
-        /* Styling the table headers */
         th {
             background-color: #FFC0CB;
             color: white;
@@ -19,22 +15,15 @@
             font-size: 1.2em;
         }
 
-        /* Styling all table cells */
         td {
             border: 1px solid #ddd;
             padding: 10px;
             text-align: center;
         }
-
-        /* Specific style for one row */
-        .highlight-row {
-            background-color: #f2f2f2;
-        }
-
-        /* Specific style for one column */
+    
         .important {
             font-weight: bold;
-            color: #d9534f;
+            color: ##FFC0CB;
         }
     </style>
 </head>
@@ -47,52 +36,52 @@
             <th>Event</th>
         </tr>
         <tr>
-            <td class="important">6:30 AM</td>
-            <td>Wake up and Morning Meditation</td>
+            <td class="important">4:00 AM</td>
+            <td>Wake up and get ready for work</td>
         </tr>
         <tr>
-            <td>7:00 AM</td>
-            <td>Exercise (Jogging)</td>
+            <td>:4:30 AM</td>
+            <td>Drive to Work</td>
         </tr>
         <tr class="highlight-row">
-            <td class="important">8:00 AM</td>
-            <td>Breakfast</td>
+            <td class="important">5:00 AM</td>
+            <td>Clock In</td>
         </tr>
         <tr>
             <td>9:00 AM</td>
-            <td>Check and Respond to Emails</td>
+            <td>Clock Out</td>
         </tr>
         <tr>
-            <td class="important">10:00 AM</td>
-            <td>Work on Project (Coding)</td>
+            <td class="important">9:15 AM</td>
+            <td>Get Starbucks and Go to School</td>
         </tr>
         <tr>
-            <td>12:00 PM</td>
-            <td>Lunch Break</td>
+            <td>3:15 PM</td>
+            <td>Leave School</td>
         </tr>
         <tr class="highlight-row">
-            <td class="important">1:00 PM</td>
-            <td>Team Meeting</td>
+            <td class="important">4:00 PM</td>
+            <td>Get Ready for 2nd Job</td>
         </tr>
         <tr>
-            <td>3:00 PM</td>
-            <td>Complete Assignments</td>
+            <td>4:30 PM</td>
+            <td>Go to Work</td>
         </tr>
         <tr>
-            <td class="important">6:00 PM</td>
-            <td>Evening Workout</td>
+            <td class="important">4:45 PM</td>
+            <td>Clock In</td>
         </tr>
         <tr class="highlight-row">
             <td>7:30 PM</td>
-            <td>Dinner</td>
+            <td>Dinner Break</td>
         </tr>
         <tr>
-            <td class="important">9:00 PM</td>
-            <td>Plan Next Day</td>
+            <td class="important">10:00 PM</td>
+            <td>Close Store and Clock Out</td>
         </tr>
         <tr>
-            <td>10:00 PM</td>
-            <td>Bedtime</td>
+            <td>10:30 PM</td>
+            <td>Get Home and Go to Bed</td>
         </tr>
     </table>
 
