--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
         .important {
             font-weight: bold;
-            color: ##FFC0CB;
+            color: #FFC0CB
         }
     </style>
 </head>
